Cross origin policy

--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -4,17 +4,21 @@
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
         http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"> 
-  <servlet>
-    <servlet-name>RestfulContainer</servlet-name>
-    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-    <init-param>
-      <param-name>com.sun.jersey.config.property.packages</param-name>
-      <param-value>com.fresearch.oversign</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>RestfulContainer</servlet-name>
-    <url-pattern>/service/*</url-pattern>
-  </servlet-mapping>
+	<servlet>
+		<servlet-name>RestfulContainer</servlet-name>
+		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+		<init-param>
+			<param-name>com.sun.jersey.config.property.packages</param-name>
+			<param-value>com.fresearch.oversign</param-value>
+		</init-param>
+		<init-param>
+			<param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
+			<param-value>com.fresearch.oversign.CORSFilter</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>RestfulContainer</servlet-name>
+		<url-pattern>/service/*</url-pattern>
+	</servlet-mapping>
 </web-app>
